# adventofcode_2022

./: .gitignore  LICENSE.txt  README.md  notes.md
day01/: .gitignore  Makefile  day01.sml  input.txt
day02/: day2.cabal  day2.hs  input.txt
day03/: Cargo.toml  input.txt
day03/src/: main.rs
day04/: day4.ml  dune  dune-project  input.txt
day05/: day5.py  input.txt
day06/: day6.fsx  input.txt
day07/: Makefile  day7.cpp  input.txt
day08/: day8.cabal  day8.hs  input.txt
day09/: day9.cabal  day9.hs  input.txt
day10/: Makefile  day10.c  input.txt
day11/: day11.ml  dune  dune-project  input.txt
day12/: day12.cabal  day12.hs  input.txt
day13/: day13.cabal  day13.hs  input.txt
day14/: day14.cabal  day14.hs  input.txt
day15/: day15.cabal  day15.hs  input.txt
day16/: input.txt
day18/: day18.cabal  day18.hs  input.txt
day19/: input.txt
day20/: input.txt
day25/: input.txt
