cabal-version:      2.4
name:               day2
version:            0.1.0.0

license:            MIT
license-file:       LICENSE
author:             Ken Friis Larsen
maintainer:         ken@friislarsen.net

copyright: Ken Friis Larsen <ken@friislarsen.net>

executable day2
    main-is: day2.hs

    build-depends:    base ^>=4.17

    hs-source-dirs:   .
    default-language: Haskell2010
