cabal-version:      2.4
name:               day13
version:            0.1.0.0

license:            MIT
license-file:       ../LICENSE
author:             Ken Friis Larsen
maintainer:         ken@friislarsen.net

copyright: Ken Friis Larsen <ken@friislarsen.net>

executable day13
    main-is: day13.hs

    build-depends:    array,
                      base >= 4 && < 5,
                      containers,
                      split

    hs-source-dirs:   .
    default-language: Haskell2010
